--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,6 @@
 plugins {
-	id 'org.springframework.boot' version '2.7.18'
-	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
-	id "com.palantir.docker" version "0.22.1"
+	id 'org.springframework.boot' version '3.1.6'
+	id "com.palantir.docker" version "0.35.0"
 	id 'java'
 }
 
@@ -16,12 +15,15 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-actuator'
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.springframework.boot:spring-boot-starter-validation'
-	implementation 'org.springdoc:springdoc-openapi-ui:1.6.9'
+	implementation 'org.springframework.boot:spring-boot-starter-actuator:3.1.6'
+	implementation 'org.springframework.boot:spring-boot-starter-web:3.1.6'
+	implementation 'org.springframework.boot:spring-boot-starter-validation:3.1.6'
+	implementation 'org.springdoc:springdoc-openapi-ui:1.7.0'
 
-	testImplementation('org.springframework.boot:spring-boot-starter-test')
+	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-gradle-plugin
+	implementation 'org.springframework.boot:spring-boot-gradle-plugin:3.1.6'
+
+	testImplementation('org.springframework.boot:spring-boot-starter-test:3.1.6')
 
 	compileOnly 'org.projectlombok:lombok:1.18.20'
 	annotationProcessor 'org.projectlombok:lombok:1.18.20'
