log level fixes

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 logging:
   level:
     org.springframework.web: ERROR
-    com.example.springboot: INFO
+    com.example.springboot: ${app_loglevel:INFO}
   pattern:
     console: "%d{yyyy-MM-dd HH:mm:ss.SSS} %10.10t [%40.-40logger{39}] ${LOG_LEVEL_PATTERN:%5.-5p} - %m%n"
     file: "%d{yyyy-MM-dd HH:mm:ss} [%thread] %5level %logger{15} - %msg%n"
