--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,3 +22,7 @@ management:
 # curl -i -X POST -H 'Content-Type: application/json' -d '{"configuredLevel": "TRACE"}' http://localhost:8080/actuator/loggers/com.example.springboot.controller.HelloController
     loggers:
       enabled: true
+  metrics:
+    export:
+      prometheus:
+        enabled: true
