per request timing logging

--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,8 @@ dependencies {
 
 	implementation 'io.micrometer:micrometer-registry-prometheus'
 
+	implementation 'org.json:json:20250107'
+
 	testImplementation "org.springframework.boot:spring-boot-starter-test:${springbootVersion}"
 
 	compileOnly "org.projectlombok:lombok:${lombokVersion}"
