--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ plugins {
 	id "com.palantir.docker" version "0.35.0"
 	id 'application'
 	id 'java'
+	id "com.gorylenko.gradle-git-properties" version "2.5.0"
 }
 
 group = 'com.example'
