--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,6 +12,8 @@ spring:
     pathmatch:
       matching-strategy: ANT_PATH_MATCHER
 
+springdoc.show-actuator: true
+
 management:
   endpoints:
     web:
