handle @value for list

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -58,3 +58,10 @@ ssl:
     path: classpath:keystore/keystore.jks
     password: changeit
     type: JKS
+
+app:
+  layer:
+    list:
+      - one
+      - two
+      - last
